tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.diagnostic
diagnostic error code=L0001 family=lexer message="unexpected character '$'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari" bytes=2
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari" line=1 column=1 end_line=1 end_column=2 byte_start=0 byte_end=1 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari:1:1\n   |\n 1 | $\n   | ^"
